--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -44,7 +44,7 @@
 }
 
 @font-face {
-  font-family: 'body-font-cjk';
+  font-family: 'body-font-cjk-zh';
   src: url('/fonts/eb-garamond/eb-garamond-regular.2026-03-19.woff2') format('woff2'),
     url('/fonts/eb-garamond/eb-garamond-regular.2026-03-19.woff') format('woff');
   font-weight: normal;
@@ -60,7 +60,7 @@
 }
 
 @font-face {
-  font-family: 'body-font-cjk';
+  font-family: 'body-font-cjk-zh';
   src: url('/fonts/eb-garamond/eb-garamond-italic.2026-03-19.woff2') format('woff2'),
     url('/fonts/eb-garamond/eb-garamond-italic.2026-03-19.woff') format('woff');
   font-weight: normal;
@@ -76,7 +76,7 @@
 }
 
 @font-face {
-  font-family: 'body-font-cjk';
+  font-family: 'body-font-cjk-zh';
   src: url('/fonts/eb-garamond/eb-garamond-semibold.2026-03-19.woff2') format('woff2'),
     url('/fonts/eb-garamond/eb-garamond-semibold.2026-03-19.woff') format('woff');
   font-weight: bold;
@@ -89,6 +89,92 @@
     U+2010-205E,
     U+20A0-20CF,
     U+2100-214F;
+}
+
+@font-face {
+  font-family: 'body-font-cjk-zh';
+  src: url('/fonts/SourceHanSerifCN/source-han-serif-cn-regular.2026-03-19.woff2') format('woff2'),
+    url('/fonts/SourceHanSerifCN/source-han-serif-cn-regular.2026-03-19.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+  unicode-range:
+    U+2E80-2EFF,
+    U+2F00-2FDF,
+    U+3000-303F,
+    U+31C0-31EF,
+    U+3400-4DBF,
+    U+4E00-9FFF,
+    U+F900-FAFF,
+    U+FF00-FFEF,
+    U+20000-2FA1F;
+}
+
+@font-face {
+  font-family: 'body-font-cjk-ja';
+  src: url('/fonts/eb-garamond/eb-garamond-regular.2026-03-19.woff2') format('woff2'),
+    url('/fonts/eb-garamond/eb-garamond-regular.2026-03-19.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+  size-adjust: 111.11%;
+  unicode-range:
+    U+0000-024F,
+    U+1E00-1EFF,
+    U+2010-205E,
+    U+20A0-20CF,
+    U+2100-214F;
+}
+
+@font-face {
+  font-family: 'body-font-cjk-ja';
+  src: url('/fonts/eb-garamond/eb-garamond-italic.2026-03-19.woff2') format('woff2'),
+    url('/fonts/eb-garamond/eb-garamond-italic.2026-03-19.woff') format('woff');
+  font-weight: normal;
+  font-style: italic;
+  font-display: swap;
+  size-adjust: 111.11%;
+  unicode-range:
+    U+0000-024F,
+    U+1E00-1EFF,
+    U+2010-205E,
+    U+20A0-20CF,
+    U+2100-214F;
+}
+
+@font-face {
+  font-family: 'body-font-cjk-ja';
+  src: url('/fonts/eb-garamond/eb-garamond-semibold.2026-03-19.woff2') format('woff2'),
+    url('/fonts/eb-garamond/eb-garamond-semibold.2026-03-19.woff') format('woff');
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+  size-adjust: 111.11%;
+  unicode-range:
+    U+0000-024F,
+    U+1E00-1EFF,
+    U+2010-205E,
+    U+20A0-20CF,
+    U+2100-214F;
+}
+
+@font-face {
+  font-family: 'body-font-cjk-ja';
+  src: url('/fonts/SourceHanSerifJP/source-han-serif-jp-regular.2026-03-19.woff2') format('woff2'),
+    url('/fonts/SourceHanSerifJP/source-han-serif-jp-regular.2026-03-19.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+  unicode-range:
+    U+3000-303F,
+    U+3040-309F,
+    U+30A0-30FF,
+    U+31F0-31FF,
+    U+3400-4DBF,
+    U+4E00-9FFF,
+    U+F900-FAFF,
+    U+FF00-FFEF,
+    U+20000-2FA1F;
 }
 
 @font-face {
